--- a/Birds/en.lproj/Main.strings
+++ b/Birds/en.lproj/Main.strings
@@ -1,27 +1,27 @@
 
 /* Class = "UILabel"; text = "category"; ObjectID = "6iJ-2k-WdZ"; */
-"6iJ-2k-WdZ.text" = "kategoria";
+"6iJ-2k-WdZ.text" = "category";
 
 /* Class = "UITableViewController"; title = "Master"; ObjectID = "7bK-jq-Zjz"; */
-"7bK-jq-Zjz.title" = "Linnut";
+"7bK-jq-Zjz.title" = "Birds";
 
 /* Class = "UILabel"; text = "Name"; ObjectID = "GGW-eU-8E1"; */
-"GGW-eU-8E1.text" = "Nimi";
+"GGW-eU-8E1.text" = "Name";
 
 /* Class = "UIViewController"; title = "Bird"; ObjectID = "JEX-9P-axG"; */
-"JEX-9P-axG.title" = "Lintu";
+"JEX-9P-axG.title" = "Bird";
 
 /* Class = "UITextView"; text = "Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda."; ObjectID = "JJo-yh-wp5"; */
 "JJo-yh-wp5.text" = "Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.";
 
 /* Class = "UINavigationController"; title = "Birds"; ObjectID = "RMx-3f-FxP"; */
-"RMx-3f-FxP.title" = "Linnut";
+"RMx-3f-FxP.title" = "Birds";
 
 /* Class = "UINavigationItem"; title = "Birds"; ObjectID = "Zdf-7t-Un8"; */
-"Zdf-7t-Un8.title" = "Linnut";
+"Zdf-7t-Un8.title" = "Birds";
 
 /* Class = "UILabel"; text = "name"; ObjectID = "flY-iH-Cru"; */
-"flY-iH-Cru.text" = "nimi";
+"flY-iH-Cru.text" = "name";
 
 /* Class = "UILabel"; text = "🔊"; ObjectID = "pfW-ag-Rr4"; */
 "pfW-ag-Rr4.text" = "🔊";
