Change name and bundle id.

--- a/Birds/fi.lproj/InfoPlist.strings
+++ b/Birds/fi.lproj/InfoPlist.strings
@@ -6,5 +6,5 @@
   Copyright © 2017 East Studios. All rights reserved.
 */
 
-"CFBundleName" = "Linnut";
-"CFBundleDisplayName" = "Linnut";
+"CFBundleName" = "Sienet";
+"CFBundleDisplayName" = "Sienet";
