--- a/Birds/Base.lproj/InfoPlist.strings
+++ b/Birds/Base.lproj/InfoPlist.strings
@@ -6,5 +6,5 @@
   Copyright © 2017 East Studios. All rights reserved.
 */
 
-"CFBundleName" = "Birds";
-"CFBundleDisplayName" = "Birds";
+"CFBundleName" = "Mushrooms";
+"CFBundleDisplayName" = "Mushrooms";
